--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         /></a>
         <div class="heading">
           <h1>ARTE JÚPITER CERAMICS.</h1>
+          <h1 class="mobile-title">HANDMADE CERAMICS.</h1>
           <h2>Unique & handmade pieces in Guatemala.</h2>
         </div>
       </div>
@@ -36,6 +37,16 @@
           <a class="alinks" href="#"><li>CONTACTO</li></a>
         </ul>
       </div>
+
+      <div id="hamburger-menu">
+        <button class="hamburger-button"> ☰ </button>
+        <div class="nav-links">
+          <a class="burgerlinks" href="#">HOME</a>
+          <a class="burgerlinks" href="#">CONTACTO</a>
+        </div>
+     </div>
+
+
     </nav>
     <div class="container">
       <div class="card">
@@ -102,5 +113,6 @@
         </div>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
