--- a/index.html
+++ b/index.html
@@ -4,115 +4,139 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Prata&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,500&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" />
-    <title>Arte Júpiter</title>
+    <title>Arte Júpiter Catalog</title>
   </head>
   <body>
-    <nav>
-      <div class="side-nav">
-        <a href=""
-          ><img
-            class="logo-nav"
-            src="images/ARTE JUPITER-small_transparent.png"
-            alt=""
-        /></a>
-        <div class="heading">
-          <h1>ARTE JÚPITER CERAMICS.</h1>
-          <h1 class="mobile-title">HANDMADE CERAMICS.</h1>
-          <h2>Unique & handmade pieces in Guatemala.</h2>
+    <!-- NAV  -->
+    <div class="nav-bar">
+      <div class="nav-container">
+        <div class="brand">
+          <a href="#"
+            ><img
+              class="navicon"
+              src="images/ARTE JUPITER-small_transparent green.png"
+              alt=""
+          /></a>
         </div>
+        <nav>
+          <div class="nav-mobile">
+            <a href="#" id="nav-toggle">
+              <span></span>
+            </a>
+          </div>
+          <ul class="nav-list">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <!-- <li>
+              <a href="#">Services</a>
+              <ul class="nav-dropdown">
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 1</a></li>
+              </ul>
+            </li>
+            <li><a href="#">Careers</a></li> -->
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
       </div>
-      <div class="navlinks">
-        <ul>
-          <a class="alinks" href="#"><li>HOME</li></a>
-          <a class="alinks" href="#"><li>CONTACTO</li></a>
-        </ul>
-      </div>
-
-      <div id="hamburger-menu">
-        <button class="hamburger-button"> ☰ </button>
-        <div class="nav-links">
-          <a class="burgerlinks" href="#">HOME</a>
-          <a class="burgerlinks" href="#">CONTACTO</a>
-        </div>
-     </div>
-
-
-    </nav>
-    <div class="container">
+    </div>
+    <!-- BANNER -->
+    <section class="banner">
+      <h1 class="banner-title">ARTE JÚPITER CERAMICS.</h1>
+      <h2 class="banner-subtitle">Handmade ceramic pieces in Guatemala.</h2>
+      <a href="#"><button class="btn">Subscribe</button></a>
+    </section>
+    <!-- CATALOG  -->
+    <div class="catalog-container">
       <div class="card">
         <img class="catalogimg" src="images/0001ceramics.jpg" alt="" />
         <div class="infocard">
-            <h2>Winter Jumbo Mug</h1>
-              <h3>Q195</h2>
+          <h2>Winter Jumbo Mug</h2>
+          <h3>Q195</h3>
         </div>
       </div>
       <div class="card">
-        <img class="catalogimg" src="images/20240103ceramicmug0008.jpg" alt="" />
+        <img
+          class="catalogimg"
+          src="images/20240103ceramicmug0008.jpg"
+          alt=""
+        />
         <div class="infocard">
-            <h2>Winter Jumbo Mug</h1>
-              <h3>Q195</h2>
+          <h2>Winter Jumbo Mug</h2>
+          <h3>Q195</h3>
         </div>
       </div>
       <div class="card">
-        <img class="catalogimg" src="images/20240103ceramicmug0012.jpg" alt="" />
+        <img
+          class="catalogimg"
+          src="images/20240103ceramicmug0012.jpg"
+          alt=""
+        />
         <div class="infocard">
-            <h2>Winter Jumbo Mug</h1>
-              <h3>Q195</h2>
+          <h2>Winter Jumbo Mug</h2>
+          <h3>Q195</h3>
         </div>
       </div>
       <div class="card">
-        <img class="catalogimg" src="images/20240103ceramicmug0029.jpg" alt="" />
+        <img
+          class="catalogimg"
+          src="images/20240103ceramicmug0029.jpg"
+          alt=""
+        />
         <div class="infocard">
-            <h2>Winter Jumbo Mug</h1>
-              <h3>Q195</h2>
+          <h2>Winter Jumbo Mug</h2>
+          <h3>Q195</h3>
         </div>
       </div>
       <div class="card">
-        <img class="catalogimg" src="images/20240103ceramicmug0046.jpg" alt="" />
+        <img
+          class="catalogimg"
+          src="images/20240103ceramicmug0046.jpg"
+          alt=""
+        />
         <div class="infocard">
-            <h2>Winter Jumbo Mug</h1>
-              <h3>Q195</h2>
+          <h2>Winter Jumbo Mug</h2>
+          <h3>Q195</h3>
         </div>
       </div>
       <div class="card">
         <img class="catalogimg" src="images/20240105ceramics0009.jpg" alt="" />
         <div class="infocard">
-            <h2>Winter Jumbo Mug</h1>
-              <h3>Q195</h2>
+          <h2>Winter Jumbo Mug</h2>
+          <h3>Q195</h3>
         </div>
       </div>
       <div class="card">
         <img class="catalogimg" src="images/20240108ceramics0003.jpg" alt="" />
         <div class="infocard">
-            <h2>Winter Jumbo Mug</h1>
-              <h3>Q195</h2>
+          <h2>Winter Jumbo Mug</h2>
+          <h3>Q195</h3>
         </div>
       </div>
       <div class="card">
         <img class="catalogimg" src="images/0001ceramics.jpg" alt="" />
         <div class="infocard">
-            <h2>Winter Jumbo Mug</h1>
-              <h3>Q195</h2>
+          <h2>Winter Jumbo Mug</h2>
+          <h3>Q195</h3>
         </div>
       </div>
       <div class="card">
         <img class="catalogimg" src="images/0001ceramics.jpg" alt="" />
         <div class="infocard">
-            <h2>Winter Jumbo Mug</h1>
-              <h3>Q195</h2>
+          <h2>Winter Jumbo Mug</h2>
+          <h3>Q195</h3>
         </div>
       </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
