--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
       <div class="card">
         <img class="catalogimg" src="images/0001ceramics.jpg" alt="" />
         <div class="infocard">
-          <h2>Winter Jumbo Mug</h2>
-          <h3>Q195</h3>
+          <h2 class="infocard-item">Winter Jumbo Mug</h2>
+          <h3 class="infocard-item">Q195</h3>
         </div>
       </div>
       <div class="card">
@@ -70,8 +70,8 @@
           alt=""
         />
         <div class="infocard">
-          <h2>Winter Jumbo Mug</h2>
-          <h3>Q195</h3>
+          <h2 class="infocard-item">Winter Jumbo Mug</h2>
+          <h3 class="infocard-item">Q195</h3>
         </div>
       </div>
       <div class="card">
@@ -81,8 +81,8 @@
           alt=""
         />
         <div class="infocard">
-          <h2>Winter Jumbo Mug</h2>
-          <h3>Q195</h3>
+          <h2 class="infocard-item">Winter Jumbo Mug</h2>
+          <h3 class="infocard-item">Q195</h3>
         </div>
       </div>
       <div class="card">
@@ -92,8 +92,8 @@
           alt=""
         />
         <div class="infocard">
-          <h2>Winter Jumbo Mug</h2>
-          <h3>Q195</h3>
+          <h2 class="infocard-item">Winter Jumbo Mug</h2>
+          <h3 class="infocard-item">Q195</h3>
         </div>
       </div>
       <div class="card">
@@ -103,36 +103,36 @@
           alt=""
         />
         <div class="infocard">
-          <h2>Winter Jumbo Mug</h2>
-          <h3>Q195</h3>
+          <h2 class="infocard-item">Winter Jumbo Mug</h2>
+          <h3 class="infocard-item">Q195</h3>
         </div>
       </div>
       <div class="card">
         <img class="catalogimg" src="images/20240105ceramics0009.jpg" alt="" />
         <div class="infocard">
-          <h2>Winter Jumbo Mug</h2>
-          <h3>Q195</h3>
+          <h2 class="infocard-item">Winter Jumbo Mug</h2>
+          <h3 class="infocard-item">Q195</h3>
         </div>
       </div>
       <div class="card">
         <img class="catalogimg" src="images/20240108ceramics0003.jpg" alt="" />
         <div class="infocard">
-          <h2>Winter Jumbo Mug</h2>
-          <h3>Q195</h3>
+          <h2 class="infocard-item">Winter Jumbo Mug</h2>
+          <h3 class="infocard-item">Q195</h3>
         </div>
       </div>
       <div class="card">
         <img class="catalogimg" src="images/0001ceramics.jpg" alt="" />
         <div class="infocard">
-          <h2>Winter Jumbo Mug</h2>
-          <h3>Q195</h3>
+          <h2 class="infocard-item">Winter Jumbo Mug</h2>
+          <h3 class="infocard-item">Q195</h3>
         </div>
       </div>
       <div class="card">
         <img class="catalogimg" src="images/0001ceramics.jpg" alt="" />
         <div class="infocard">
-          <h2>Winter Jumbo Mug</h2>
-          <h3>Q195</h3>
+          <h2 class="infocard-item">Winter Jumbo Mug</h2>
+          <h3 class="infocard-item">Q195</h3>
         </div>
       </div>
     </div>
