--- a/index.html
+++ b/index.html
@@ -136,6 +136,29 @@
         </div>
       </div>
     </div>
+    <!-- END OF CATALOG -->
+    <footer>
+      <div class="footer-container">
+        <div class="">
+          <a href="#"
+            ><img
+              class="footericon"
+              src="images/ARTE JUPITER-small_light.png"
+              alt=""
+          /></a>
+        </div>
+        <ul class="footer-list">
+          <li><a href="#">FB</a></li>
+          <li><a href="#">IG</a></li>
+          <li><a href="#">TIKTOK</a></li>
+        </ul>
+        <ul class="footer-list">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+    </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="script.js"></script>
   </body>
